--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "multer": "^1.3.0",
     "react": "^16.2.0",
     "react-addons-test-utils": "^15.6.2",
+    "react-aria-modal": "^2.12.1",
+    "react-chat-widget": "^2.1.3",
+    "react-chat-window": "^1.0.8",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
@@ -47,6 +50,7 @@
     "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.5.1",
     "redux-thunk": "^2.2.0",
+    "style-loader": "^0.21.0",
     "webpack": "^3.10.0",
     "yarn": "^1.3.2"
   },
@@ -55,9 +59,14 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.19",
+    "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
     "eslint-plugin-es-beautifier": "^1.0.1",
     "eslint-plugin-react": "^7.6.1",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.11",
+    "image-webpack-loader": "^4.2.0",
     "jsdom": "11.6.2",
     "jsdom-global": "3.0.2"
   }
