--- a/package.json
+++ b/package.json
@@ -35,12 +35,11 @@
     "jest": "^22.4.3",
     "jsonwebtoken": "^8.1.0",
     "mongoose": "^5.0.1",
+    "mongoose-findoneorcreate": "^1.0.0",
     "multer": "^1.3.0",
     "react": "^16.2.0",
     "react-addons-test-utils": "^15.6.2",
-    "react-aria-modal": "^2.12.1",
     "react-chat-widget": "^2.1.3",
-    "react-chat-window": "^1.0.8",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
