--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-babel": "^7.0.1",
     "gulp-eslint": "^4.0.2",
     "gulp-zip": "^4.1.0",
+    "http": "0.0.0",
     "jest": "^22.4.3",
     "jsonwebtoken": "^8.1.0",
     "mongoose": "^5.0.1",
@@ -49,7 +50,10 @@
     "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.5.1",
     "redux-thunk": "^2.2.0",
+    "socket.io": "^2.1.0",
+    "socket.io-client": "^2.1.0",
     "style-loader": "^0.21.0",
+    "uuid": "^3.2.1",
     "webpack": "^3.10.0",
     "yarn": "^1.3.2"
   },
